tests/snapshots/diagnostic_snapshots__diag_canonical_list_literal_does_not_match_shadowing_source_list.snap
---
source: tests/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "type error in function 'bad': canonical compiler-owned type `List(Nat)` is distinct from source-declared type `List(Nat)`"
  span:
    start: 201
    end: 212
  severity: Error
  phase: TypeChecking
