tests/snapshots/diagnostic_snapshots__diag_duplicate_struct_field.snap
---
source: tests/diagnostic_snapshots.rs
expression: diagnostics
---
- message: "duplicate field `x`"
  span:
    start: 59
    end: 88
  severity: Error
  phase: TypeChecking
