tests/snapshots/diagnostic_snapshots__diag_effect_arg_arity_mismatch.snap
---
source: tests/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "type error at call site in function 'test': ability `State` expects 1 type argument, but 2 were given"
  span:
    start: 110
    end: 122
  severity: Error
  labels:
    - span:
        start: 82
        end: 98
      message: enclosing function effect contract is declared here
  phase: TypeChecking
