tests/snapshots/diagnostic_snapshots__diag_effect_row_mismatch.snap
---
source: tests/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "type error in function 'test': effect mismatch: expected `{Foo}`, found `{Bar, Foo}`"
  span:
    start: 75
    end: 115
  severity: Error
  phase: TypeChecking
