tests/snapshots/diagnostic_snapshots__diag_list_literal_element_type_mismatch.snap
---
source: tests/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "type error in function 'invalid': expected `Bool`, found `Nat`"
  span:
    start: 1
    end: 44
  severity: Error
  phase: TypeChecking
